--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,10 @@
-h1 {color: green}
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400&display=swap');
+
+body {
+    font-family: Quicksand, sans-serif;
+}
+
+h1 {
+    color: green;
+    font-family: Pacifico, sans-serif; 
+}
