Add styles for logo and nav links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400&display=swap');
 
+* {
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+
 body {
     font-family: Quicksand, sans-serif;
 }
+
+
+
+/* logo and nav links */
 
 h1 {
     color: green;
     font-family: Pacifico, sans-serif; 
 }
+
+
+#menu-left, #menu-right{
+    font-size: 120%;
+}
+
+#menu-left, #menu-right, #logo {
+    line-height: 100px;
+}
+
+#menu-left li {
+    list-style-type: none;
+    float: left;
+    margin-right: 10px;
+    margin-left: 30px;
+}
+
+#logo {
+    text-align: center;
+    float: left;
+    margin-left: 180px;
+    font-size: 300%;
+    
+}
+
+
+#menu-right li {
+    list-style-type: none;
+    float: right;
+    margin-right: 30px;
+
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu-left a:hover, #menu-right a:hover {
+      border-bottom: 1px solid green;
+}
+
