--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 
 body {
     font-family: Quicksand, sans-serif;
+    background-color: #E3AF66;
 }
 
 
@@ -60,4 +61,8 @@ a {
 #menu-left a:hover, #menu-right a:hover {
       border-bottom: 1px solid green;
 }
+
+/* Main image */
+
+
 
