--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,17 +16,18 @@ body {
 
 /* logo and nav links */
 
+
 h1 {
     color: green;
     font-family: Pacifico, sans-serif; 
 }
 
 
-#menu-left, #menu-right{
+#menu-left {
     font-size: 120%;
 }
 
-#menu-left, #menu-right, #logo {
+#menu-left,  #logo {
     line-height: 100px;
 }
 
@@ -35,34 +36,63 @@ h1 {
     float: left;
     margin-right: 10px;
     margin-left: 30px;
+
 }
 
 #logo {
     text-align: center;
-    float: left;
-    margin-left: 180px;
     font-size: 300%;
     
 }
 
 
-#menu-right li {
-    list-style-type: none;
-    float: right;
-    margin-right: 30px;
-
-}
 
 a {
     text-decoration: none;
     color: inherit;
 }
 
-#menu-left a:hover, #menu-right a:hover {
+#menu-left a:hover {
       border-bottom: 1px solid green;
 }
 
 /* Main image */
 
+#caption-text {
+    color: beige;
+    text-align: center;
+    padding: 10px;
+    
+}
+
+#caption-text hr {
+    border: 1px solid green;
+    margin-top: 15px;
+}
+
+/* Musuem info */
+
+#info-title {
+    text-transform: uppercase;
+    text-align: center;
+    margin: 30px 0 10px;
+}
+
+#flex-info-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+    
+   
+}
+
+.flex-info {
+    border: 1px dotted green;
+    flex-basis: 40%;  
+    margin-bottom: 15px;
+    padding: 10px;
+   
+}
 
 
