--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,7 @@ a {
     text-transform: uppercase;
     text-align: center;
     margin: 30px 0 10px;
+    font-weight: 600;
 }
 
 #flex-info-container {
@@ -121,7 +122,7 @@ a {
 }
 
 /* Building layout */
-
+/* 
 .flex-container-layout {
     display: flex;
     justify-content: space-between;
@@ -133,5 +134,30 @@ a {
         margin: 10px;
         border: 2px solid beige;
    
+} */
+
+
+#layout-background {
+    background-color: #4F7942;
+
+}
+
+.museum-layout-container img {
+    width: 600px;
+    height: 300px;
+    margin: 8px;
+    border: 1px solid #E3AF66;
+}
+
+.museum-layout-container {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+
+.museum-layout-container figcaption {
+    color: #E3AF66;
 }
 
