--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,3 +151,15 @@ footer {
     padding: 0 4px;
 }
 
+.collection-column {
+    flex: 33%;
+    max-width: 33%;
+    padding: 0 4px;
+    overflow: hidden;
+}
+
+.collection-column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;    
+}
